<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 画面タイトル -->
    <string name="app_name">最低価格</string>
    <string name="category_list_name">カテゴリリスト</string>
    <string name="shop_list_name">店リスト</string>
    <string name="price_list_name">価格リスト</string>
    <string name="category_setting_name">カテゴリ設定</string>

    <!-- メニュー名 -->
    <string name="menu_category_setting">カテゴリ設定</string>
    <string name="menu_shop_setting">店設定</string>
    <string name="menu_settings">その他設定</string>
    <string name="menu_info">バージョン情報</string>

    <!-- ボタン名 -->
    <string name="add_goods_button">商品追加</string>
    <string name="add_price_button">価格追加</string>
    <string name="add_category_button">カテゴリ追加</string>
    <string name="add_shop_button">店追加</string>
    <string name="category_name_button">カテゴリ名</string>
    <string name="shop_name_button">店名</string>

    <!-- ラベル名 -->
    <string name="goods_name_label">商品名</string>
    <string name="category_name_label">カテゴリ名</string>
    <string name="shop_name_label">店名</string>
    <string name="quantity_label">数量</string>
    <string name="price_label">価格</string>
    <string name="unit_price_label">単価</string>
    <string name="memo_label">メモ</string>

    <!-- ダイアログタイトル -->
    <string name="goods_edit_dialog_title">商品編集</string>
    <string name="goods_detail_dialog_title">商品詳細</string>
    <string name="goods_delete_dialog_title">商品削除確認</string>
    <string name="price_edit_dialog_title">価格編集</string>
    <string name="price_detail_dialog_title">価格詳細</string>
    <string name="price_delete_dialog_title">価格削除確認</string>
    <string name="category_edit_dialog_title">カテゴリ編集</string>
    <string name="category_detail_dialog_title">カテゴリ詳細</string>
    <string name="category_delete_dialog_title">カテゴリ削除確認</string>
    <string name="shop_edit_dialog_title">店編集</string>
    <string name="shop_detail_dialog_title">店詳細</string>
    <string name="shop_delete_dialog_title">店削除確認</string>

    <!-- ダイアログボタン -->
    <string name="dialog_regist_button">登録</string>
    <string name="dialog_update_button">変更</string>
    <string name="dialog_delete_button">削除</string>
    <string name="dialog_close_button">閉じる</string>
    <string name="dialog_cancel_button">キャンセル</string>

    <string name="dialog_delete_message_prefix">「</string>
    <string name="dialog_delete_message_suffix">」を削除しますか</string>

    <!-- バージョン情報ダイアログ -->
    <string name="info_dialog_title">バージョン情報</string>
    <string name="info_dialog_message_prefix">最低価格\nVer.</string>
    <string name="info_dialog_message_suffix">\nCopyright(C) 2014 paveway.info. All rights reserved.</string>
    <string name="info_dialog_positive_button">閉じる</string>

    <string name="success_regist">登録しました</string>
    <string name="success_update">更新しました</string>
    <string name="success_delete">削除しました</string>

    <!-- エラーメッセージ -->
    <string name="error_illeagal_transition">不正な画面遷移です</string>
    <string name="error_cancel">キャンセルします</string>
    <string name="error_delete">削除できませんでした</string>
    <string name="error_registed">登録済みです</string>
    <string name="error_regist">登録できませんでした</string>
    <string name="error_update">更新できませんでした</string>
    <string name="error_change">このデータは変更できません</string>

    <string name="error_input_goods_name">商品名が入力されていません</string>
    <string name="error_input_category_name">カテゴリ名が入力されていません</string>
    <string name="error_input_shop_name">店名が入力されていません</string>
    <string name="error_input_all">全て入力してください</string>
    <string name="error_select_category">カテゴリ名が選択されていません</string>
    <string name="error_illeagal_quantity">数量が不正な値です</string>
    <string name="error_illeagal_price">価格が不正な値です</string>

    <string name="default_value">未指定</string>

    <string name="drawer_open">開く</string>
    <string name="drawer_close">閉じる</string>


</resources>
