<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

      <LinearLayout
          android:id="@+id/headerLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical" >

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal" >

              <Button
                  android:id="@+id/addGoodsButton"
                  android:text="@string/add_goods_button"
                  style="?android:attr/buttonStyleSmall"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1" />

          </LinearLayout>

          <LinearLayout
              android:id="@+id/list_title_label"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal" >
<!--
              <TextView
                  android:id="@+id/categoryNameLabel"
                  android:text="@string/category_name_label"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="2"
                  android:padding="8dp"
                  android:textSize="16sp" />
-->
              <TextView
                  android:id="@+id/goodsNameLabel"
                  android:text="@string/goods_name_label"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="2"
                  android:padding="8dp"
                  android:textSize="16sp" />

              <TextView
                  android:id="@+id/shopNameLabel"
                  android:text="@string/shop_name_label"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="2"
                  android:padding="8dp"
                  android:textSize="16sp" />

              <TextView
                  android:id="@+id/unitPriceLabel"
                  android:text="@string/unit_price_label"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:padding="8dp"
                  android:textSize="16sp" />

          </LinearLayout>

      </LinearLayout>

      <LinearLayout
          android:id="@+id/footerLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentBottom="true" >

          <include layout="@layout/adview" />

      </LinearLayout>

      <ListView
          android:id="@+id/goodsListView"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_above="@id/footerLayout"
          android:layout_below="@id/headerLayout" >

      </ListView>

  </RelativeLayout>

    <ListView
        android:id="@+id/drawerList"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#FAFAFAFA" />

</android.support.v4.widget.DrawerLayout>

