<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" >

            <Button
                android:id="@+id/registButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/regist_button" />

            <Button
                android:id="@+id/clearButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/clear_button" />

        </RelativeLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" >

                <Button
                    android:id="@+id/categoryNameButton"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/category_name_button" />

                <TextView
                    android:id="@+id/categoryNameValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:id="@+id/categoryNameRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" >

                <TextView
                    android:id="@+id/goodsNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:text="@string/goods_name_label" />

                <EditText
                    android:id="@+id/goodsNameValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:textSize="16sp" >

                    <requestFocus />
                </EditText>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" >

                <TextView
                    android:id="@+id/memoLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/memo_label"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/memoValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:textSize="16sp" />

            </TableRow>

        </TableLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_vertical" >

            <Button
                android:id="@+id/addPriceButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/add_price_button" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/shopNameLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:background="@layout/border"
                android:text="@string/shop_name_label"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/quantityLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:background="@layout/border"
                android:text="@string/quantity_label"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/priceLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:background="@layout/border"
                android:text="@string/price_label"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/unitPriceLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:background="@layout/border"
                android:text="@string/unit_price_label"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/footerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include layout="@layout/adview" />

    </LinearLayout>

    <ListView
        android:id="@+id/priceListView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_above="@id/footerLayout"
        android:layout_below="@id/buttonLayout" >

    </ListView>

</RelativeLayout>
